# Diana-Web-Scanner

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.targets.yaml  docker-compose.yaml  pyproject.toml
.claude/agents/: agent-benchmark.md  agent-generality.md  agent-test-author.md  agent-test-critic.md  agent-test-runner.md  agent-tinyloop.md  agent-validation.md
.claude/skills/agent-benchmark/: SKILL.md
.claude/skills/agent-generality/: SKILL.md
.claude/skills/agent-improvement/: SKILL.md
.claude/skills/agent-orchestrator/: SKILL.md
.claude/skills/agent-review/: SKILL.md
.claude/skills/agent-test-author/: SKILL.md
.claude/skills/agent-test-critic/: SKILL.md
.claude/skills/agent-test-runner/: SKILL.md
.claude/skills/agent-tinyloop/: SKILL.md
.claude/skills/agent-validation/: SKILL.md
.claude/skills/sage-validate-juiceshop/: SKILL.md
docs/: AGENT_LOOPS.md  AGENT_ROUTER.md  AGENT_TEAM_PLAN.md  ARCHITECTURE.md  CHRONICLE.md  FUTURE_ARCHETYPE_PROFILER.md  FUTURE_RAG_OPTIMIZATION.md  GETTING_STARTED.md  ROADMAP.md  SCAN_RESULTS.md
engagements/: local-juiceshop.yaml  test-dvwa.yaml  test-juiceshop.yaml  test-webgoat.yaml
scripts/: bedrock-pricing.json  entrypoint-benchmark.sh  entrypoint-test.sh  entrypoint-tinyloop.sh  entrypoint-validation.sh  fetch-agent-results.sh  run-agent-task.sh
src/diana/: __init__.py  api.py  cli.py  config.py
src/diana/ai/: agent.py  auth_agent.py  bedrock.py  configurator.py  llm.py  prompts.py  scan_graph.py  session_monitor.py  token_tracker.py  tool_agent.py
src/diana/core/: archetypes.py  crawler.py  http_client.py  models.py  orchestrator.py  state.py  (+1 more)
tests/: conftest.py
tests/integration/: test_access_control_dispatch.py  test_input_validation_dispatch.py
(+61 files in other folders)
