[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diana-scanner"
version = "0.1.0"
description = "AI-enabled web vulnerability scanner powered by Amazon Bedrock"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Diana Contributors" }]

dependencies = [
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "boto3>=1.35,<2.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1,<4.0",
    "playwright>=1.45,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "langchain>=1.2,<2.0",
    "langchain-ollama>=0.3,<1.0",
    "langchain-aws>=1.4,<2.0",
    "langgraph>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "respx>=0.21,<1.0",
    "moto[bedrock]>=5.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/diana-scanner/diana"
Repository = "https://github.com/diana-scanner/diana"
Issues = "https://github.com/diana-scanner/diana/issues"

[project.scripts]
diana = "diana.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/diana"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
